# laputa

./: .gitignore  AGENTS.md  Cargo.toml  DECISIONS.md  README.md  STATUS.md
config/: laputa.toml  laputa.toml.example
docs/dev/: README.md
docs/dev/bmad-output/: README.md
docs/dev/bmad-output/implementation-artifacts/: 2-1-diary-write.md  (+37 more)
docs/dev/design/: brain-memory-system-design.md
docs/dev/research/: README.md
src/: config.rs  lib.rs  main.rs  vector_storage.rs
src/api/: error.rs  mod.rs
src/archiver/: exporter.rs  mod.rs
src/cli/: commands.rs  handlers.rs  mod.rs  output.rs
src/dialect/: mod.rs
src/diary/: memory_gate.rs  mod.rs
src/export/: full.rs  mod.rs
src/heat/: config.rs  decay.rs  mod.rs  service.rs  state.rs
src/identity/: initializer.rs  mod.rs
src/knowledge_graph/: mod.rs  relation.rs  resonance.rs
src/mcp_server/: mod.rs
src/rhythm/: capsule.rs  mod.rs  scheduler.rs  weekly.rs
src/searcher/: hybrid.rs  mod.rs  recall.rs
src/storage/: memory.rs  mod.rs  sqlite.rs
src/utils/: mod.rs
src/wakeup/: mod.rs
tests/: test_archiver.rs  test_cli_flow.rs  test_cli_mark.rs  test_emotion_anchor.rs  test_emotion_dimension.rs  test_export_full.rs  test_heat.rs  test_hybrid_search.rs  test_identity.rs  test_memory_gate.rs  test_memory_record.rs  test_relation_node.rs  test_repo_metadata.rs  test_rhythm.rs  test_semantic_search.rs  test_standalone_build.rs  test_timeline_recall.rs  test_user_intervention.rs  test_vector_storage_validation.rs  test_wakepack.rs
tests/fixtures/: memory_only.rs  mod.rs  time_machine.rs  with_tempdir.rs
(+58 files in other folders)
