[package]
name = "laputa"
version = "0.1.0"
edition = "2021"
description = "High-performance, local AI memory with AAAK v3.2 protocol and temporal Knowledge Graph"
license = "MIT"
repository = "https://github.com/jxoesneon/laputa"
homepage = "https://github.com/jxoesneon/laputa"
keywords = ["memory", "ai", "mcp", "knowledge-graph", "aaak"]
categories = ["command-line-utilities", "database", "artificial-intelligence"]
readme = "README.md"
documentation = "https://github.com/jxoesneon/laputa#readme"
default-run = "laputa"
exclude = [
    "models/*",
    ".fastembed_cache/*",
    "assets/*",
    "benchmarks/*",
    "*.db",
    "*.db-journal",
    "target/*"
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
async-trait = "0.1"
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.51.0", features = ["full"] }
mcp_rs = { version = "0.1.0" }
futures = "0.3.32"
walkdir = "2.5.0"
regex = "1.12.3"
chrono = "0.4.44"
symspell = "0.3.0"
reqwest = { version = "0.12", features = ["json"] }
rayon = "1.10"
dialoguer = "0.11"
tempfile = "3.27.0"
lazy_static = "1.5.0"
md5 = "0.7.0"
hex = "0.4.3"
fastembed = "4"
usearch = { version = "2", default-features = false }
ignore = "0.4.25"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "2"

